--- a/src/scss/pardot-forms.scss
+++ b/src/scss/pardot-forms.scss
@@ -90,88 +90,74 @@ input[type='submit']:focus {
   color: $brand-primary;
 }
 
-/* custom checkboxes/radios */
+/* custom checkboxes */
 
-input[type='radio'],
 input[type='checkbox'] {
   opacity: 0;
   position: absolute;
+
+  & + label {
+    display: flex;
+    width: 100%;
+    font-size: $typescale-2;
+    cursor: pointer;
+
+    &:before {
+      content: '';
+      display: block;
+      height: 1rem;
+      width: 1rem;
+      margin-right: $spacing-2;
+      margin-top: $spacing-2;
+      border: 1px solid currentColor;
+    }
+  }
+
+  &:focus + label:before {
+    box-shadow: 0 0 0 2px $brand-primary;
+  }
+
+  &:checked + label:before {
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-image: url("data:image/svg+xml,%3csvg width='10' height='8' viewBox='0 0 10 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill-rule='evenodd' clip-rule='evenodd' d='M2.12132 5.65686L0 3.53554L1.41421 2.12132L3.53553 4.24265L7.77817 0L9.19239 1.41422L4.94975 5.65686L3.53553 7.07108L2.12132 5.65686Z' fill='%230D395F'/%3e%3c/svg%3e ");
+  }
 }
 
-input[type='radio'] + label,
-input[type='checkbox'] + label {
-  position: relative;
-  padding-left: 1.5rem;
-  cursor: pointer;
-}
+/* custom radios */
 
-input[type='radio'] + label:before,
-input[type='checkbox'] + label:before {
-  content: '';
-  display: block;
-  width: 14px;
-  height: 14px;
-  border: 1px solid $gray;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  position: absolute;
-  transition: box-shadow 0.2s;
-}
-
-input[type='radio'] + label:before {
-  border-radius: 10rem;
-}
-
-input[type='radio']:focus + label:before,
-input[type='checkbox']:focus + label:before {
-  box-shadow: 0 0 0 2px $brand-primary;
-  border-color: $white;
-}
-
-input[type='radio']:checked + label:before,
-input[type='checkbox']:checked + label:before {
-  background-color: $brand-primary;
-  border-color: $brand-primary;
-}
-
-input[type='radio']:checked + label:before {
-  background: $brand-primary;
-}
-
-input[type='checkbox'] + label:after {
-  transition: opacity 0.2s;
-  position: absolute;
-  left: 5px;
-  top: 2px;
-  width: 4px;
-  height: 10px;
-  border-bottom: 2px solid;
-  border-right: 2px solid;
-  border-color: $border-color;
-  transform: rotate(45deg);
-  content: '';
-  display: block;
+input[type='radio'] {
   opacity: 0;
-}
-
-input[type='radio'] + label:after {
-  content: '';
-  display: block;
   position: absolute;
-  left: 5px;
-  top: 7px;
-  width: 6px;
-  height: 6px;
-  background: $white;
-  opacity: 0;
-  transition: opacity 0.2s;
-  border-radius: 10rem;
-}
 
-input[type='radio']:checked + label:after,
-input[type='checkbox']:checked + label:after {
-  opacity: 1;
+  & + label {
+    display: flex;
+    width: 100%;
+    font-size: $typescale-2;
+    cursor: pointer;
+
+    &:before {
+      content: '';
+      display: block;
+      height: 1rem;
+      width: 1rem;
+      margin-right: $spacing-2;
+      margin-top: $spacing-2;
+      border: 1px solid currentColor;
+      border-radius: 100%;
+    }
+  }
+
+  // add outline circle on focus of radio
+  &:focus + label:before {
+    box-shadow: 0 0 0 2px $brand-primary;
+  }
+
+  &:checked + label:before {
+    background-color: $white;
+    border-color: $brand-primary;
+    box-shadow: inset 0 0 0 4px $brand-primary;
+  }
 }
 
 /* error states */
